--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,11 @@
 page-home {
  
-
-
+  
+    video {
+        width: 100%    !important;
+        height: auto   !important;
+      }
+      
 
 
 }
