--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,8 +2,8 @@ page-home {
  
   
     video {
-        width: 100%    !important;
-        height: auto   !important;
+        width: 100%;
+        
       }
       
 
