--- a/src/pages/wallpaper/wallpaper.scss
+++ b/src/pages/wallpaper/wallpaper.scss
@@ -1,6 +1,7 @@
 page-wallpaper {
     .image-container{
         background-size: cover;
+        min-height: 200px;
     }
 }
 /*https://www.youtube.com/watch?v=Wa6QXQj6UaM*/
